2009-10-05  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Mikhail Gusarov

	* src/lib/epdf_main.cpp:
	* src/lib/epdf_main.h:

2009-09-12  Gustavo Barbieri

	* src/lib/epdf_main.cpp:
	use eina_init() instead of eina_list_init(), which
	is deprecated now.

2009-06-14  Gustavo Barbieri

	* src/lib/esmart_pdf.h:
	* src/lib/esmart_pdf.c:
	update to Eina_Bool

2009-05-14  Vincent Torri  <doursse at users dot sf dot net>

	reviewed by: Vincent Torri
	patch by: Rawnar, modified by Vincent Torri

	* src/lib/epdf_main.cpp:
	do not pass NULL to GlobalParams()

	* src/lib/esmart_pdf.c:
	* src/lib/ewl_pdf.c:
	add epdf_init() and epdf_shutdown() calls to init and
	shutdown of the esmart and ewl objects

2009-05-14  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	requires poppler >= 0.10

2009-03-29  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/epdf_document.cpp:
	* src/lib/epdf_main.cpp:
	move initialization of globalParams from
	epdf_document to epdf_main

	* src/lib/epdf_page.cpp:
	initialize list to NULL

2009-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/bin/epdf_evas_test.c:
	* src/lib/Epdf.h:
	* src/lib/epdf_document.cpp:
	* src/lib/epdf_document.h:
	* src/lib/epdf_fontinfo.cpp:
	* src/lib/epdf_index.cpp:
	* src/lib/epdf_index.h:
	* src/lib/epdf_page.cpp:
	* src/lib/epdf_page.h:
	* src/lib/epdf_page_transition.cpp:
	* src/lib/epdf_postscript.cpp:
	* src/lib/epdf_private.h:
	* src/lib/esmart_pdf.c:
	* src/lib/esmart_pdf.h:
	move to eina data types and formatting

	* src/lib/epdf_main.cpp:
	* src/lib/epdf_main.h:
	add function to initialize and shut down
	epdf as eina_list must be initialize / shut down

2009-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* Doxyfile:
	remove Doxyfile from the top level directory

	* src/bin/epdf_evas_test.c:
	formatting

	* src/lib/epdf_page.cpp:
	set correctly the evas object data after having
	updated it

	* src/lib/ewl_pdf.c: