@@ -1,3 +1,12 @@
+2009-11-07  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/epdf_document.cpp:
+	* src/lib/epdf_document.h:
+	* src/bin/epdf_evas_test.c:
+	* configure.ac:
+	poppler 0.12 introduced an API breakage when getting
+	the version of the PDF document
+
 2009-10-05  Vincent Torri  <doursse at users dot sf dot net>
 
 	reviewed by: Vincent Torri
